--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -8,13 +8,23 @@
 
 
     <ImageView
-        android:id="@+id/icon_cancel_button"
+        android:id="@+id/flashcard_cancel_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:src="@drawable/icon_cancel"
+        android:layout_margin="10dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="7dp"
-        android:src="@drawable/icon_cancel" />
+        android:layout_alignParentEnd="true"/>
+
+    <ImageView
+        android:id="@+id/flashcard_save_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/savebutton"
+        android:layout_margin="10dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"/>
+
 
     <EditText
         android:id="@+id/flashcard_question_edittext"
