--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,9 +43,21 @@
         android:layout_height="61dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="262dp"
-        android:layout_marginEnd="3dp"
+        android:layout_marginTop="440dp"
+        android:layout_marginEnd="6dp"
         app:srcCompat="@drawable/new_next_button" />
+
+
+    <ImageView
+        android:id="@+id/flashcard_delete_icon"
+        android:layout_width="49dp"
+        android:layout_height="61dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="224dp"
+        android:layout_marginEnd="180dp"
+        app:srcCompat="@drawable/delete_icon" />
 
 
 </RelativeLayout>
